--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/react-dom": "18.2.7",
     "@use-gesture/react": "^10.3.0",
     "autoprefixer": "10.4.16",
-    "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.2",
@@ -47,6 +46,10 @@
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.1",
-    "@types/react-infinite-scroller": "^1.2.3"
+    "@types/react-infinite-scroller": "^1.2.3",
+    "eslint": "8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   }
 }
