--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "tabWidth": 4,
-  "useTabs": false
-} 
+  "tabWidth":4,
+  "useTabs":false,
+  "semi":false,
+  "singleQuote":false,
+  "trailingComma":"es5",
+  "bracketSpacing":true,
+  "jsxBracketSameLine":false,
+  "arrowParens":"always",
+  "requirePragma":false,
+  "insertPragma":false
+}
