--- a/package.json
+++ b/package.json
@@ -39,9 +39,15 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroller": "^1.2.6",
+    "react-recycled-scrolling": "^1.0.8",
     "react-string-replace": "^1.1.1",
     "react-swipeable-list": "^1.9.1",
     "react-textarea-autosize": "^8.5.3",
+    "react-virtualized": "^9.22.5",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-virtuoso": "^4.6.1",
+    "react-window": "^1.8.9",
+    "swiper": "^10.3.1",
     "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
@@ -50,6 +56,7 @@
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.1",
     "@types/react-infinite-scroller": "^1.2.3",
+    "@types/react-window": "^1.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "8.50.0",
