--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-string-replace": "^1.1.1",
     "react-swipeable-list": "^1.9.1",
     "react-textarea-autosize": "^8.5.3",
