--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-infinite-scroller": "^1.2.6",
+    "react-slick": "^0.29.0",
     "react-string-replace": "^1.1.1",
     "react-swipeable-list": "^1.9.1",
     "react-textarea-autosize": "^8.5.3",
     "react-virtuoso": "^4.6.1",
     "react-window": "^1.8.9",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3",
@@ -51,8 +53,8 @@
     "yet-another-react-lightbox": "^3.12.2"
   },
   "devDependencies": {
-    "@types/react-image-gallery": "^1.2.1",
     "@types/react-infinite-scroller": "^1.2.3",
+    "@types/react-slick": "^0.23.10",
     "@types/react-window": "^1.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
