--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-circular-progressbar": "^2.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
@@ -53,6 +54,7 @@
     "yet-another-react-lightbox": "^3.12.2"
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.4",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-slick": "^0.23.10",
     "@types/react-window": "^1.8.6",
