--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.2",
     "next": "13.5.4",
+    "next-i18next": "^14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
