--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next": "^23.6.0",
     "jotai": "^2.4.2",
     "next": "13.5.4",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
