--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.2.7",
     "@use-gesture/react": "^10.3.0",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
     "compressorjs": "^1.2.1",
     "eslint-config-next": "13.5.2",
@@ -37,6 +38,7 @@
     "jotai": "^2.4.2",
     "next": "13.5.4",
     "next-pwa": "^5.6.0",
+    "open-graph-scraper": "^6.3.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
