--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dropzone": "^14.2.3",
     "react-i18next": "^13.3.1",
     "react-infinite-scroller": "^1.2.6",
+    "react-pull-to-refreshify": "^0.1.0",
     "react-slick": "^0.29.0",
     "react-string-replace": "^1.1.1",
     "react-swipeable-list": "^1.9.1",
