--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-slick": "^0.29.0",
     "react-string-replace": "^1.1.1",
+    "react-swipe-down-refresh": "^0.1.1",
     "react-swipeable-list": "^1.9.1",
     "react-textarea-autosize": "^8.5.3",
     "react-virtuoso": "^4.6.1",
