--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-textarea-autosize": "^8.5.3",
     "react-virtuoso": "^4.6.1",
     "react-window": "^1.8.9",
+    "sharp": "^0.33.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "tailwind-variants": "^0.1.14",
