--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
     "compressorjs": "^1.2.1",
+    "cssnano": "^6.0.3",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
