--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next": "^23.6.0",
     "jotai": "^2.4.2",
     "next": "13.5.4",
+    "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "open-graph-scraper": "^6.3.2",
     "postcss": "8.4.31",
@@ -61,6 +62,7 @@
     "swiper": "^10.3.1",
     "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "5.2.2",
     "yet-another-react-lightbox": "^3.12.2"
   },
