--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
     "jotai": "^2.4.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "next": "13.5.4",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
@@ -64,6 +65,7 @@
     "tailwindcss": "3.3.3",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "5.2.2",
+    "webpack-remove-empty-scripts": "^1.0.4",
     "yet-another-react-lightbox": "^3.12.2"
   },
   "devDependencies": {
