--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@nextui-org/react": "^2.1.13",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
+    "@nextui-org/react": "2.1.13",
+    "@nextui-org/system": "2.0.10",
+    "@nextui-org/theme": "^2.1.9",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-next-experimental": "^5.5.0",
     "@tidbcloud/serverless": "^0.0.7",
