--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next": "^23.7.16",
     "jotai": "^2.6.1",
     "next": "14.0.4",
+    "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "open-graph-scraper": "^6.3.2",
     "postcss": "8.4.31",
