--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "jotai": "^2.6.1",
     "next": "14.0.4",
     "next-pwa": "^5.6.0",
+    "node-oracledb": "^1.0.2",
     "open-graph-scraper": "^6.3.2",
+    "oracledb": "^6.3.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
