--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.7",
+    "babel-loader": "^9.1.3",
     "browser-image-compression": "^2.0.2",
     "cssnano": "^6.0.3",
     "eslint-config-next": "14.0.4",
